// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli adds a delta to the new config if smaller than maxSize 1`] = `
"{
  \\"files\\": [
    {
      \\"path\\": \\"src/__tests__/.next/.bundlesize_\\",
      \\"maxSize\\": \\"5.04KB\\"
    },
    {
      \\"path\\": \\"src/__tests__/.next/.bundlesize__app\\",
      \\"maxSize\\": \\"5.03KB\\"
    }
  ]
}"
`;

exports[`cli produces concatenated bundle file 1`] = `
"// _app.js
// index.js
"
`;

exports[`cli produces config with correct files and sizes 1`] = `
"{
  \\"files\\": [
    {
      \\"path\\": \\"src/__tests__/.next/.bundlesize_\\",
      \\"maxSize\\": \\"1 kB\\"
    },
    {
      \\"path\\": \\"src/__tests__/.next/.bundlesize__app\\",
      \\"maxSize\\": \\"1 kB\\"
    }
  ]
}"
`;

exports[`cli uses the previous config if defined 1`] = `
"{
  \\"files\\": [
    {
      \\"path\\": \\"src/__tests__/.next/.bundlesize_\\",
      \\"maxSize\\": \\"5.04KB\\"
    },
    {
      \\"path\\": \\"src/__tests__/.next/.bundlesize__app\\",
      \\"maxSize\\": \\"5.03KB\\"
    }
  ]
}"
`;
